# LMA

./: .clang-format  .format-list  .gitignore  README.md
.github/workflows/: doxygen-gh-pages.yml  static.yml
doc/doxy/: 0_mainpage.dox  1_mathematics.dox  2_acmetering.dox  DoxyLayout.xml  Doxyfile  x_softwarearchitecture.dox
doc/doxy/img/: images.drawio
doc/html/: _l_m_a___port_8c.html  _l_m_a___port_8c_a0ed807aa118c3d1c575540889d42a8fc_icgraph.md5  _l_m_a___port_8c_a35e2a464220416b435202e65c49f081e_icgraph.md5  _l_m_a___port_8c_a7a2aab7f7b061b109a75fc594c6ace9a_icgraph.md5  _l_m_a___port_8h__dep__incl.md5  _l_m_a___port_8h_a4a5c8b4247c9e9199210186bc3c13b17_icgraph.md5  _l_m_a___port_8h_a779020ae5f636fdc10d7d4d1c16af614_icgraph.md5  _l_m_a___port_8h_afc7eb113e0601ffa3a5c43523f4fce09_icgraph.md5  _l_m_a___port_8h_source.html  _l_m_a___types_8h_source.html  annotated.html  classes.html  dir_000000_000001.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  doxygen_crawl.html  functions.html  globals_func.html  globals_type.html  group___a_p_i.html  group___a_p_i.js  group___callbacks_ga0b562fb3faedc4cabaceb4f9cf1edcf1_cgraph.md5  group___control.md5  group___control_gaf99c92bd7cb9c347b51c1f70650ed14e_cgraph.md5  group___logging.md5  group___measurement.js  group___measurement.md5  group___porting.html  navtreeindex0.js  struct_l_m_a___accumulators.html  struct_l_m_a___consumption_data.html  struct_l_m_a___workspace_1_1_l_m_a___samples.html  struct_l_m_a___zero_cross.html  topics.js
doc/html/search/: all_14.js  all_15.js  classes_0.js  classes_1.js  classes_4.js  classes_5.js  groups_3.js  groups_5.js  pages_0.js  pages_e.js  pages_f.js  typedefs_1.js  variables_4.js  variables_e.js  variables_f.js
docs/doxy/: 1_mathematics.dox  2_acmetering.dox  DoxyLayout.xml  Doxyfile
docs/doxy/img/: .$images.drawio.bkp
docs/html/: _a_c_metering.html  _l_m_a___core_8h_source.html  _l_m_a___port_8c.html  _l_m_a___port_8c__incl.md5  _l_m_a___port_8c_a0ec0a576a1b465cf7aad0ca463fd5bdc_icgraph.md5  _l_m_a___port_8c_a32ee17e5c7d93ac8cbe0c8a0c29cb7ee_icgraph.md5  _l_m_a___port_8c_a4b95531c9a4b3eb7ee25789ede359307_icgraph.md5  _l_m_a___port_8c_a689bf9e8fa9038a9ed256ad33d61b9b9_icgraph.md5  _l_m_a___port_8c_a9162eb24b49199f5645e19947b58f0d4_icgraph.md5  _l_m_a___port_8c_a9794245eb0fee9a8529d60fdb2c26049_icgraph.md5  _l_m_a___port_8c_aeb0cb0cfdc39c499463f05085ea3ed40_icgraph.md5  _l_m_a___port_8c_af75b8718f2165ca67649e8cc4562bcd5_icgraph.md5  _l_m_a___port_8h.html  _l_m_a___port_8h__dep__incl.md5  _l_m_a___port_8h__incl.md5  _l_m_a___port_8h_a151e636346e8d70f24bde7fb8e1e541a_icgraph.md5  _l_m_a___port_8h_a8937215442fec58dfb4616ea1ca600d2_icgraph.md5  _l_m_a___port_8h_a8b4c7d69c1f590571ca7e7106516f500_icgraph.md5  _l_m_a___port_8h_a9b840b72a8462025fdda0b040574cf04_icgraph.md5  _l_m_a___port_8h_ac618fc1c90b46df365c2ea4db12fc74e_icgraph.md5  _l_m_a___port_8h_ac8fbcae78a03ecfcc4a408caec2813a1_icgraph.md5  _l_m_a___port_8h_ad22b64d2871e93f81fa71c0052a49574_icgraph.md5  _l_m_a___port_8h_aebefc389f6e54cc4a0c7d83361e9d1da_icgraph.md5  _l_m_a___port_8h_af3c87a640362680ec1b8a1e4c4c5a298_icgraph.md5  _l_m_a___port_8h_source.html  _l_m_a___types_8h.html  _l_m_a___types_8h__dep__incl.md5  _l_m_a___types_8h__incl.md5  _l_m_a___types_8h_source.html  _l_m_a___utils_8h_source.html  _mathematics.html  annotated.html  annotated_dup.js  classes.html  dir_000002_000003.html  dir_000003_000002.html  dir_000003_000004.html  dir_1e9dd8187bb9df78f704fd2e1ce44255.html  dir_1e9dd8187bb9df78f704fd2e1ce44255_dep.md5  dir_29bfa77a3fdf00e90df59b3429e901a3.html  (+118 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  groups_1.js  groups_4.js  pages_0.js  pages_10.js  pages_11.js  pages_12.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  pages_6.js  pages_7.js  (+29 more)
examples/YPMOD_RA2A2_3PH/: RUNME.md
examples/YPMOD_RA2A2_3PH/LMA_YPMOD_RA2A2/: .cproject  .project  .secure_azone  .secure_rzone  .secure_xml  LMA_YPMOD_RA2A2 Debug_Flat.launch  configuration.xml  ra_cfg.txt
examples/YPMOD_RA2A2_3PH/LMA_YPMOD_RA2A2/ra_cfg/fsp_cfg/: r_sci_uart_cfg.h  r_sdadc_b_cfg.h
examples/YPMOD_RA2A2_3PH/LMA_YPMOD_RA2A2/ra_gen/: bsp_clock_cfg.h  common_data.c  hal_data.c  hal_data.h  pin_data.c  vector_data.c  vector_data.h
examples/YPMOD_RA2A2_3PH/LMA_YPMOD_RA2A2/src/: hal_entry.c
examples/YPMOD_RA2A2_3PH/LMA_YPMOD_RA2A2/src/Benchmark/: Benchmark.c  Benchmark.h
examples/YPMOD_RA2A2_3PH/LMA_YPMOD_RA2A2/src/Menu/: Menu.c  Menu.h
examples/YPMOD_RA2A2_3PH/LMA_YPMOD_RA2A2/src/Storage/: Storage.c  Storage.h
examples/YPMOD_RA2A2_3PH/LMA_YPMOD_RA2A2/src/SysTick_Benchmark/: SysTick_Benchmark.c  SysTick_Benchmark.h
examples/YPMOD_RL78I1C_ROGOWSKI/: RUNME.md
examples/YPMOD_RL78I1C_ROGOWSKI/LMA_YPMOD_RL78I1C_ROGOWSKI/: .cproject  .project  LMA_YPMOD_RL78I1C_ROGOWSKI HardwareDebug E1.launch  LMA_YPMOD_RL78I1C_ROGOWSKI HardwareDebug.launch  LMA_YPMOD_RL78I1C_ROGOWSKI.rcpc
examples/YPMOD_RL78I1C_ROGOWSKI/LMA_YPMOD_RL78I1C_ROGOWSKI/src/: LMA_YPMOD_RL78I1C_ROGOWSKI.c
examples/YPMOD_RL78I1C_ROGOWSKI/LMA_YPMOD_RL78I1C_ROGOWSKI/src/Integrator/: Trap_integrator.c  (+1 more)
examples/windows/: CMakeLists.txt  README.md  RUNME.md
examples/windows/src/: main.c  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
examples/windows/src/args_parser/: args_parser.c  args_parser.cpp  args_parser.h  args_parser.hpp
examples/windows/src/simulation/: simulation.c  simulation.cpp  simulation.h  simulation.hpp
port/: LMA_Port.c  LMA_Port.h
port/0_Generic/: LMA_Port.c  LMA_Port.h
port/Windows/: LMA_Port.c  LMA_Port.h
port/YPMOD-RA2A2-3PH/: LMA_Port.c  LMA_Port.h
port/YPMOD-RL78I1C-ROGOWSKI/: LMA_Port.c  LMA_Port.h
src/: LMA_Core.c  LMA_Core.h  LMA_Types.h
src/LMA_Utils/: LMA_Types.h  LMA_Utils.c  LMA_Utils.h
(+37 files in other folders)
